--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,6 +29,9 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method="POST" action=<%= `/urls/${url}/delete` %>>
+              <button>Delete</button>
+            </form></td>
           </tr>
         <% } %>
       </tbody>
