added edit buttom and post form to edit long url in server side and the view page

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,6 +32,8 @@
             <td><form method="POST" action=<%= `/urls/${url}/delete` %>>
               <button>Delete</button>
             </form></td>
+            <td><form method="GET" action=<%= `/urls/${url}/edit` %>>
+              <button>Edit</button></form></td>
           </tr>
         <% } %>
       </tbody>
