--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,6 +22,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -29,11 +31,12 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method="GET" action=<%= `/urls/${url}/edit` %>>
+              <button>Edit</button>
+            </form></td>
             <td><form method="POST" action=<%= `/urls/${url}/delete` %>>
               <button>Delete</button>
             </form></td>
-            <td><form method="GET" action=<%= `/urls/${url}/edit` %>>
-              <button>Edit</button></form></td>
           </tr>
         <% } %>
       </tbody>
