--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,9 +31,9 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><form method="GET" action=<%= `/urls/${url}/edit` %>>
-              <button>Edit</button>
-            </form></td>
+           <td><form method="GET" action=<%= `/urls/${url}` %>>
+              <button type="submit">Edit</button>
+            </form></td>  
             <td><form method="POST" action=<%= `/urls/${url}/delete` %>>
               <button>Delete</button>
             </form></td>
