--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,8 +17,8 @@
     <div class="card-footer text-muted">
         <h4>Edit</h4>
         <form method="POST" action=<%= `/urls/${shortURL}` %>>
-            <label for="longURL">Edit URL:</label>
-            <input type="text" name="longURL" style="width: 300px; margin: 1em" placeholder=<%= longURL %>>
+            <label>Edit URL:</label>
+            <input type="text" style="width: 300px; margin: 1em" placeholder=<%= longURL %>>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
