installed cookie-parser and added username login feature to be tested with cookie

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,10 +32,10 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
            <td><form method="GET" action=<%= `/urls/${url}` %>>
-              <button type="submit">Edit</button>
+              <button type="submit" class="btn btn-outline-warning">Edit</button>
             </form></td>  
             <td><form method="POST" action=<%= `/urls/${url}/delete` %>>
-              <button>Delete</button>
+              <button class="btn btn-outline-danger">Delete</button>
             </form></td>
           </tr>
         <% } %>
