created a login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,8 +16,8 @@
       </header>
 
   <div style="color: lightslategrey; margin: 50px 0 0 50px">
-    <h3>Sign Up</h3><br>
-    <form method="POST" action="/register">
+    <h3>Login</h3><br>
+    <form method="POST" action="/login">
       <div>
         <label for="email">Email:</label><br>
         <input type="email" name="email" placeholder="email">
@@ -27,7 +27,7 @@
       <label for="password">Password:</label><br>
       <input type="password" name="password" placeholder="password">
     </div>
-    <button type="submit" name="register" class ="btn btn-outline-secondary" style="margin: 50px 50px 50px 0">Register</button>
+    <button type="submit" name="login" class ="btn btn-outline-secondary" style="margin: 50px 50px 50px 0">Login</button>
     </form>
 
   </div>
