created helper.js file and exported the emailLoopkup function to the helper file

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -16,7 +16,7 @@
       </header>
 
   <div style="color: lightslategrey; margin: 50px 0 0 50px">
-    <h3>Sign Up</h3><br>
+    <h3 style="margin: auto">Sign Up</h3><br>
     <form method="POST" action="/register">
       <div>
         <label for="email">Email:</label><br>
