--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,7 +34,7 @@
            <td><form method="GET" action=<%= `/urls/${url}` %>>
               <button type="submit" class="btn btn-outline-warning">Edit</button>
             </form></td>  
-            <td><form method="POST" action=<%= `/urls/${url}/delete` %>>
+            <td><form method="POST" action=<%= `/urls/${url}/delete?_method=DELETE` %>>
               <button class="btn btn-outline-danger">Delete</button>
             </form></td>
           </tr>
